--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -38,7 +38,7 @@ UnterschriftenMitStvKlassenlehrer=N
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
-; Anlage 32: Gymnasium: "berweisungszeugnis
+; Anlage 32: Gymnasium: Überweisungszeugnis
 [Anlage32]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
