--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -40,8 +40,10 @@ ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenPersonen=A
+UnterschriftenSLAL=T
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
+UnterschriftenKL=T
+UnterschriftenKLText=Klassenlehrer
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -49,6 +51,7 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
+VersetzungBeginnASDJahrgang=09
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
@@ -239,20 +242,35 @@ UnicodeInPDFVerwenden=N
 ;
 ;
 ; 
-; UnterschriftenPersonen
+; UnterschriftenSLAL
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
-; UnterschriftenSLALText einen Wert erhalten.
+; legt fest, ob der Schulleiter oder der Abteilungsleiter das Zeugnis unterschreibt. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenSLALText festgelegt.
 ; Mögliche Angaben: 
-; S für Schulleitung und Klassenleitung aus Datenbank
-; A	für Abteilungsleitung und Klassenleitung aus Datenbank
-; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+; S=Schulleitung aus Datenbank
+; V=stellvertretende Schulleitung aus Datenbank
+; A=Abteilungsleitung aus Datenbank
+; T=Texteingabe bei Zeugnisaufruf.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
-; den Wert T haben.
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
 ; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+;
+; UnterschriftenKL
+; ----------------------
+; legt fest, welcher Name unter dem Unterschriftenfeld der Klassenleitung steht. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenKLText festgelegt.
+; Mögliche Angaben: 
+; K=Klassenleitung aus Datenbank
+; T=Texteingabe bei Zeugnisaufruf. Man kann ein Lehrerkürzel eingeben oder den exakten Text, der unter dem Unterschriftenfeld stehen soll.
+;
+; UnterschriftenKLText
+; ----------------------
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Klassenleitung voreingestellt ist.
+; Mögliche Angaben: 
+; Lehrerkürzel oder
+; exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
