--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -40,9 +40,9 @@ ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=T
+UnterschriftenSLAL=A
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=T
+UnterschriftenKL=K
 UnterschriftenKLText=Klassenlehrer
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
@@ -250,12 +250,17 @@ UnicodeInPDFVerwenden=N
 ; S=Schulleitung aus Datenbank
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
-; T=Texteingabe bei Zeugnisaufruf.
+; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
 ; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
-; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+; Mögliche Angaben:
+; 
+; - Lehrerkürzel; falls andere Funktion als "Schulleiter" gewünscht, 
+;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
+; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenKL
 ; ----------------------
@@ -263,14 +268,17 @@ UnicodeInPDFVerwenden=N
 ; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenKLText festgelegt.
 ; Mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
-; T=Texteingabe bei Zeugnisaufruf. Man kann ein Lehrerkürzel eingeben oder den exakten Text, der unter dem Unterschriftenfeld stehen soll.
+; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
 ;
 ; UnterschriftenKLText
 ; ----------------------
 ; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Klassenleitung voreingestellt ist.
-; Mögliche Angaben: 
-; Lehrerkürzel oder
-; exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+; Mögliche Angaben:
+; 
+; - Lehrerkürzel; falls andere Funktion als "Klassenlehrer" gewünscht, 
+;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
+; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Klassenlehrer
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
