Beispielreport der GE angepasst: - Funktionen in den Hauptbericht verschoben und Bezeichnung angepasst. - Kleinere Code-Formatierungen vorgenommen.

--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -1,17 +1,17 @@
-[Eînleitung]
+[Einleitung]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 27.03.2020 (Plümper)
-; INI-Datei für die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
+; Format der INI-Datei vom 27.03.2020 (PlÃ¼mper)
+; INI-Datei fÃ¼r die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Zeilen, die mit einem Semikolon beginnen sind Kommentare und werden ignoriert.
-; Für jedes Zeugnis (Anlagen in der BASS) können hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
-; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zu den Optionen findet sich am Ende der Datei
-; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
+; fÃ¼r jedes Zeugnis (Anlagen in der BASS) kÃ¶nnen hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
+; Es folgen nun die mÃ¶glichen Optionen zur Einstellung des Zeugnisverhaltens. Eine ErklÃ¤rung zu den Optionen findet sich am Ende der Datei
+; Nicht jede Einstellung wird von jedem Zeugnisformular unterstÃ¼tzt.
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ; Anlage 38: Abschlussprognose Gesamtschule
@@ -29,7 +29,7 @@ UnterschriftenMitTitel=J
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
-; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
+; Anlagen 39 und 40: Zeugnis fÃ¼r Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
@@ -55,7 +55,7 @@ VersetzungBeginnASDJahrgang=09
 SchriftenInPDFEinbetten=N
 UnicodeInPDFVerwenden=N
 
-; Anlage 41: Überweisungszeugnis Gesamtschule
+; Anlage 41: ï¿½berweisungszeugnis Gesamtschule
 [Anlage41]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
@@ -161,50 +161,50 @@ UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Angaben zu den möglichen Optionen
+; Angaben zu den mÃ¶glichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; 
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
-; Mögliche Angaben: J=Ja und N=Nein
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; A3ZeugnisSeiten14Ausblenden 
 ; ------------------------------------------
 ; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
 ; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
-; Mögliche Angaben: J=Ja und N=Nein
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
 ; --------------
-; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
-; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,GrÃ¼n,Blau). Standardwert ist 192,192,192
+; mÃ¶gliche Angaben: R,G,B, jeweils mit Werten von 0-255 fÃ¼r R,G,B
 ;
 ;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 oder 08
+; mÃ¶gliche Angaben: 06 oder 07 oder 08
 ;
 ;
 ;
 ; ZeugnisVorname
 ; -------------------
-; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. UnabhÃ¤ngig von der Wahl der Option wird bei einem leeren Feld "Weitere Vornamen"
 ; das Feld Vorname verwendet.
-; Mögliche Angaben: 
-; V=Nur das Feld „Vorname“ verwenden 
-; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
-; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
+; mÃ¶gliche Angaben: 
+; V=Nur das Feld "Vorname" verwenden 
+; W=Das Feld "Vorname" durch AnhÃ¤ngen des Feldes "Weitere Vornamen" ergÃ¤nzen
+; A=Nur das Feld "Weitere Vornamen" verwenden, es wird damit als "ALLE Vornamen" interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
-; Mögliche Angaben:
+; mÃ¶gliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
 ; K=Konferenzdatum des akt. Lernabschnittes 
-; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
+; V=entspricht Z mit der Ausnahme fÃ¼r nicht versetzte SchÃ¼ler im zweiten Halbjahr, dort wird K gewÃ¤hlt
 ; E=Entlassdatum
 ; S=Schulwechseldatum
 ; A=Aktuelles Tagesdatum
@@ -213,40 +213,40 @@ UnicodeInPDFVerwenden=N
 ;
 ; ZeugnisDatumAngabe
 ; ------------------
-; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; wird nur gewÃ¤hlt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
+; mÃ¶gliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
 ; ZeugnisInformationenQuelle 
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; mÃ¶gliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
 ; 
 ; ZeugnisInformationenWiederanfangAngabe 
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; mÃ¶gliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe1 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe2 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
 ; 
 ; UnterschriftenSLAL
 ; ----------------------
 ; legt fest, ob der Schulleiter oder der Abteilungsleiter das Zeugnis unterschreibt. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
-; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenSLALText festgelegt.
-; Mögliche Angaben: 
+; eine Textabfrage. Der Defaultwert dafÃ¼r wird in UnterschriftenSLALText festgelegt.
+; mÃ¶gliche Angaben: 
 ; S=Schulleitung aus Datenbank
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
@@ -254,71 +254,71 @@ UnicodeInPDFVerwenden=N
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
-; Mögliche Angaben:
+; legt den Defaulttext fest, der bei der Textabfrage fÃ¼r das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
+; mÃ¶gliche Angaben:
 ; 
-; - Lehrerkürzel; falls andere Funktion als "Schulleiter" gewünscht, 
+; - LehrerkÃ¼rzel; falls andere Funktion als "Schulleiter" gewÃ¼nscht, 
 ;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
 ; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
-;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+;   Er wird direkt ins Zeugnis Ã¼bernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenKL
 ; ----------------------
 ; legt fest, welcher Name unter dem Unterschriftenfeld der Klassenleitung steht. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
-; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenKLText festgelegt.
-; Mögliche Angaben: 
+; eine Textabfrage. Der Defaultwert dafÃ¼r wird in UnterschriftenKLText festgelegt.
+; mÃ¶gliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
 ;
 ; UnterschriftenKLText
 ; ----------------------
-; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Klassenleitung voreingestellt ist.
-; Mögliche Angaben:
+; legt den Defaulttext fest, der bei der Textabfrage fÃ¼r das Unterschriftenfeld der Klassenleitung voreingestellt ist.
+; mÃ¶gliche Angaben:
 ; 
-; - Lehrerkürzel; falls andere Funktion als "Klassenlehrer" gewünscht, 
+; - LehrerkÃ¼rzel; falls andere Funktion als "Klassenlehrer" gewÃ¼nscht, 
 ;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
 ; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
-;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Klassenlehrer
+;   Er wird direkt ins Zeugnis Ã¼bernommen. Beispiel: Max Mustermann, Klassenlehrer
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
-; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; Mögliche Angaben: J=Ja und N=Nein
+; werden sollen. Wenn hier die Option N gewÃ¤hlt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitAmtsbezeichnungen 
 ; ----------------------------------
-; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergÃ¤nzt werden soll.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
-; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergÃ¤nzt werden soll.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamenNurErster 
 ; ----------------------------------
-; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berÃ¼cksichtigt werden soll.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
-; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob ein Titel bei Unterschriften ergÃ¤nzt werden soll.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ;
 ; SchulabschlussQuelle
 ; ------------------
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
-; Mögliche Angaben:
+; mÃ¶gliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
-; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
+; L=Eintrag aus Liste der AbschlÃ¼sse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
 ;
@@ -326,12 +326,12 @@ UnicodeInPDFVerwenden=N
 ; SchriftenInPDFEinbetten
 ; -----------------------
 ; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
 ; UnicodeInPDFVerwenden
 ; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
-; Mögliche Angaben: J=Ja und N=Nein
+; legt fest, ob bei der Erzeugung der PDF-Dateien fÃ¼r Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
+; mÃ¶gliche Angaben: J=Ja und N=Nein
 ;
